--- a/package.json
+++ b/package.json
@@ -18,10 +18,19 @@
   "homepage": "https://github.com/sogko/pecker-docs",
   "devDependencies": {
     "fs-extra": "^0.12.0",
+    "glob": "^4.0.6",
     "gulp": "^3.8.8",
     "gulp-flatten": "0.0.4",
     "gulp-liquid": "^0.1.0",
+    "gulp-rename": "^1.2.0",
+    "handlebars": "^2.0.0",
     "jsonfile": "^2.0.0",
-    "pecker": "0.0.0"
+    "liquid-node": "^2.1.2",
+    "lodash": "^2.4.1",
+    "pecker": "0.0.0",
+    "vinyl-map": "^1.0.1"
+  },
+  "dependencies": {
+    "deamdify": "^0.1.1"
   }
 }
