--- a/_config.yml
+++ b/_config.yml
@@ -31,10 +31,6 @@ collections:
     title: 'Usages'
     output: true
     permalink: /usages/:path/
-  documentation:
-    title: 'Documentation'
-    output: true
-    permalink: /documentation/:path/
   tutorial:
     title: 'Tutorial'
     output: true
@@ -51,6 +47,8 @@ collections:
     title: 'Posts'
     output: true
     permalink: /posts/:path/
+
+showDrafts: true
 
 # Keep as an empty string if served up at the root. If served up at a specific
 # path (e.g. on GitHub pages) leave off the trailing slash, e.g. /my-project
